# gen/resources/openapi/v1.yaml
@@ -24,6 +24,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/RecipeCollection'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
         '404':
           $ref: '#/components/responses/NotFound'
         '425':
@@ -50,7 +52,12 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/ValidationError'
-
+    Unauthorized:
+      description: 'Unauthorized'
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
   schemas:
     Error:
       type: object
